start testing model on new images

--- a/.ben/notebooks/dwnld_flickr30k.ipynb
+++ b/.ben/notebooks/dwnld_flickr30k.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "749497f0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "from pathlib import Path\n",
     "from tqdm.notebook import tqdm\n",
     "from PIL import Image\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os"
    ]
   },
   {
@@ -25,7 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "id": "a165889b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0️⃣ Setup\n",
+    "BASE_DIR: Path = Path().resolve()\n",
+    "DATA_DIR: Path = BASE_DIR.parent / \"data\" / \"flickr30k\"\n",
+    "METADATA: Path = DATA_DIR / \"metadata.parquet\"\n",
+    "IMG_DIR: Path = DATA_DIR / \"images\"\n",
+    "\n",
+    "# make sure the data & images folders exist\n",
+    "DATA_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "IMG_DIR.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "02801cb0",
    "metadata": {},
    "outputs": [
@@ -45,13 +64,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# 0️⃣ Setup\n",
-    "ROOT    = Path(\"data/flickr30k\")\n",
-    "IMG_DIR = ROOT / \"images\"\n",
-    "ROOT.mkdir(parents=True, exist_ok=True)\n",
-    "IMG_DIR.mkdir(exist_ok=True)\n",
     "\n",
     "# 1️⃣ Download & load with HF’s built-in progress bar\n",
     "ds_all = load_dataset(\"nlphuji/flickr30k\")\n",
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "aecf5844",
    "metadata": {},
    "outputs": [
@@ -124,11 +136,9 @@
    ],
    "source": [
     "\n",
-    "META_PATH = ROOT / \"metadata.parquet\"\n",
-    "\n",
     "# Load metadata\n",
     "import pandas as pd\n",
-    "meta_df = pd.read_parquet(META_PATH)\n",
+    "meta_df = pd.read_parquet(METADATA)\n",
     "\n",
     "# Show first 3 images\n",
     "for fname in meta_df[\"filename\"].head(3):\n",
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "54174402",
    "metadata": {},
    "outputs": [
@@ -201,15 +211,13 @@
        "2  1000268201.jpg  A child in a pink dress is climbing up a set o...  test"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load metadata\n",
-    "meta_df = pd.read_parquet(Path(\"data/flickr30k/metadata.parquet\"))\n",
-    "\n",
     "# Display the first 3 rows\n",
     "meta_df.head(3)"
    ]
@@ -281,6 +289,29 @@
     "# check for any missing values\n",
     "print(\"Missing values in metadata:\")\n",
     "print(meta_df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "732083ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total unique words in captions: 20538\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count all unique words in captions\n",
+    "all_captions = \" \".join(meta_df[\"caption\"])\n",
+    "words = [w for w in all_captions.split()]\n",
+    "# get unqiue words\n",
+    "unique_words = set(words)\n",
+    "print(f\"Total unique words in captions: {len(unique_words)}\")"
    ]
   }
  ],
