integrate clip or vit switching

--- a/.ben/notebooks/test_model.ipynb
+++ b/.ben/notebooks/test_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "ff79d909",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "\n",
     "# Get model path and test data path\n",
     "BASE_DIR: Path = Path().resolve()\n",
-    "CKPT_PATH: Path = BASE_DIR.parent / \"ckpts\" / \"ckpt_20250702_134623_epoch01_acc0.9860.pt\"\n",
+    "CKPT_PATH: Path = BASE_DIR.parent / \"ckpts\" / \"ckpt_20250702_161219_epoch02_acc0.3523.pt\"\n",
     "TEST_DATA_PATH: Path = BASE_DIR.parent / \"data\" / \"test_images\"\n",
     "\n",
     "MAX_SEQ_LEN = 50  # max sequence length for captions"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "e37967e2",
    "metadata": {},
    "outputs": [
@@ -43,21 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bwilliams/mlx/week4/MLX8-W4-Multimodal-TransferLearning/.ben/.ben/pytorch_uv/lib/python3.10/site-packages/transformers/models/vit/feature_extraction_vit.py:30: FutureWarning: The class ViTFeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use ViTImageProcessor instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Using device: cuda\n",
       "Loaded model 'google/vit-base-patch16-224-in21k' with 86,389,248 params (329.55 MB)\n",
       "Loaded text embedder 'Qwen/Qwen3-Embedding-0.6B' (vocab=151669, dim=1024) on cuda\n"
      ]
@@ -74,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "190e3b37",
    "metadata": {},
    "outputs": [
@@ -106,7 +92,7 @@
        ")"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "349b979f",
    "metadata": {},
    "outputs": [],
@@ -144,7 +130,7 @@
     "    img: PIL.Image.Image,\n",
     "    max_len: int = MAX_SEQ_LEN,\n",
     "    temperature: float = 1.0,\n",
-    "    top_k: int = 10\n",
+    "    top_k: int = 50\n",
     ") -> str:\n",
     "    # 0) pick a valid BOS:\n",
     "    bos_id = text_embedder.tokenizer.bos_token_id \\\n",
@@ -201,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "969c3108",
    "metadata": {},
    "outputs": [
@@ -209,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "→  scattered streaming stream streaming stream streaming stream streaming stream streaming\n"
+      "→ itive students of one is playing their game and they can be seen after a game. game. party. game. as an event. game. jersey and the opposing team member holding the ball. but not on the table with other racquet. their\n"
      ]
     },
     {
@@ -226,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "→  opposition assorted projected projection projected projection projected projection projected projection\n"
+      "→ ina, his student wearing a hat, is performing a trick over a computer. device. and using a computer screen. screens. lights, and scissors, on the right, while the keyboard instruments in the background of the screen. six spectators to the\n"
      ]
     },
     {
@@ -244,29 +230,13 @@
     "# 4) Run on  test folder\n",
     "test_folder = Path(TEST_DATA_PATH)\n",
     "for img_path in sorted(test_folder.glob(\"*.jpg\"))[:5]:\n",
-    "    img = Image.open(img_path).convert(\"RGB\")\n",
+    "    img = PIL.Image.open(img_path).convert(\"RGB\")\n",
     "    cap = generate_caption(img)\n",
     "    plt.figure(figsize=(4,4))\n",
     "    plt.imshow(img); plt.axis(\"off\")\n",
     "    print(\"→\", cap)\n",
     "    plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "737b82b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29432ec9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
